# logs_collection

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitlag-ci.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  log.py  logger.py  main.py  nginx.conf  pyproject.toml  user.py
logs_collection/: manage.py
logs_collection/logs_collection/: asgi.py  settings.py  urls.py  wsgi.py
logs_collection/logs_collection_drf/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
logs_collection/logs_collection_drf/migrations/: 0001_initial.py
logs_collection/logs_collection_drf/services/: notification_service.py  retrieve_by_logging_level_service.py
logs_collection/logs_collection_drf/tests/unit_tests/: test_operation_service.py
source/core/: models.py  serializers.py  urls.py  views.py
source/core/migrations/: 0001_initial.py
source/core/services/: log_output_service.py  notification_service.py  operation_service.py  retrieve_by_logging_level_service.py
source/core/tests/component_tests/: test_log_view_set.py  test_retrieve_by_logging_level_view_set.py  test_user_view_set.py
source/core/tests/unit_tests/: test_log_output_service.py  test_notification_service.py  test_operation_service.py  test_retrieve_by_logging_level_service.py
source/general/: asgi.py  settings.py  urls.py  wsgi.py
static/: .gitignore
tests/: test_a0_logs_output_as_a_file.py  test_acceptance_of_events.py  test_acceptance_of_two_events.py  test_notifying_users.py  test_retrieval_by_logging_level.py
